quick fix pokeball was too big

--- a/pokedextest/src/components/PokemonCard/pokemoncard.scss
+++ b/pokedextest/src/components/PokemonCard/pokemoncard.scss
@@ -26,7 +26,8 @@
 }
 
 .showLoader {
-  display: inline-block
+  display: inline-block;
+  height: 4rem;
 }
 
 a:link { text-decoration: none; }
